--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="bolge">
-        <p>Bölge Seç</p>
+        <p id="">Bölge Seç</p>
         <input type="text" id="inputOfRegion" placeholder="Lütfen bir il veya ilçe yazınız.">
         <button id="girisBtn">Giriş</button>
     </div>
@@ -36,11 +36,11 @@
             <h6 id="detailOfWeather" class="weather-detail"></h6>
         </div>
     </div>
-
+    <hr>
     <div id="graphic">
 
     </div>
-
+    <hr>
     <div id="threeDaysWeather">
         <div class="day1 days">
             <h5>Day1</h5>
