--- a/index.html
+++ b/index.html
@@ -43,27 +43,27 @@
     <hr>
     <div id="threeDaysWeather">
         <div class="day1 days">
-            <h5>Day1</h5>
-            <img src="ICONS/sunny-3-512.png" alt="hava durumu">
+            <h5 class="day">Day1</h5>
+            <img src="ICONS/sunny-3-512.png" alt="hava durumu" class="imageDayOfWeather">
             <div class="maxMinDegree">
-                <p>33°</p>
-                <p>23°</p>
+                <p class="degreeOfDay">33°</p>
+                <p class="degreeOfDay">23°</p>
             </div>
         </div>
         <div class="day2 days">
-            <h5>Day2</h5>
-            <img src="ICONS/sunny-3-512.png" alt="hava durumu">
+            <h5 class="day">Day2</h5>
+            <img src="ICONS/sunny-3-512.png" alt="hava durumu" class="imageDayOfWeather">
             <div class="maxMinDegree">
-                <p>33°</p>
-                <p>23°</p>
+                <p class="degreeOfDay">33°</p>
+                <p class="degreeOfDay">23°</p>
             </div>
         </div>
         <div class="day3 days">
-            <h5>Day3</h5>
-            <img src="ICONS/sunny-3-512.png" alt="hava durumu">
+            <h5 class="day">Day3</h5>
+            <img src="ICONS/sunny-3-512.png" alt="hava durumu" class="imageDayOfWeather">
             <div class="maxMinDegree">
-                <p>33°</p>
-                <p>23°</p>
+                <p class="degreeOfDay">33°</p>
+                <p class="degreeOfDay">23°</p>
             </div>
         </div>
     </div>
